# arthur32

./: .clangd  .gitignore  CMakeLists.txt  README.md  bctypes.h  fileio.cpp  fileio.h  memstream.h  memwriter.h  omffile.h  omfsegment.cpp  omfsegment.h
.github/workflows/: release.yml
build-release/: CMakeCache.txt  Makefile  arthur32  cmake_install.cmake
source/: arthur32.cpp  fileio.cpp  fileio.h  omffile.cpp  omffile.h  omfsegment.cpp  omfsegment.h
tests/: run_tests.sh  verify_xpress.py
tests/align_probe/: probe.link
tests/bigdata_project/: bigdata.link  bigdata.s  bigdata_xpl.link  main.s
vcxproj/: arthur32.sln  arthur32.vcxproj  arthur32.vcxproj.filters
